# goodies

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  cleanup_images.py  pyproject.toml  requirements.txt
.aws/: normconf-goodies-service.json  normconf-task-definition.json
.github/workflows/: develop.yml  infracleanup.yml  normconf.yml  test.yml
app/: __init__.py  config.py  main.py  normconf.py  schemas.py  test_main.py
app/goodies/: links.txt  queen.txt  rickroll.txt  zen_of_normcore.txt
app/goodies/media/: normconf_ascii.txt  zen_of_normcore.txt
