[tool.poetry]
name = "goodies"
version = "0.1.0"
description = ""
authors = ["Ben Labaschin <benjaminlabaschin@gmail.com>"]

[tool.poetry.dependencies]
boto3 = "^1.23.9"
fastapi = "^0.78.0"
lxml = "^4.9.1"
openpyxl = "^3.0.10"
pandas = "^1.4.2"
pydantic = "^1.9.1"
python = "3.10.4"
python-dotenv = "^0.20.0"
structlog = "^22.1.0"
tabulate = "^0.9.0"
requests = "^2.27.1"
uvicorn = "^0.17.6"
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
jupyter = "^1.0.0"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99 # override black's default line-length
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"
